<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>sakai-standard-tool</artifactId>
		<groupId>org.sakaiproject.purepoms</groupId>
		<version>2.7.0-build02-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<name>Sakai Search Project</name>
	<groupId>org.sakaiproject.search</groupId>
	<artifactId>search</artifactId>
	<version>1.2-SNAPSHOT</version>
	<scm>
		<connection>scm:svn:https://source.sakaiproject.org/svn/search/trunk
		</connection>
		<developerConnection>
			scm:svn:https://source.sakaiproject.org/svn/search/trunk
		</developerConnection>
		<url>https://source.sakaiproject.org/svn/search/trunk
		</url>
	</scm>
	<packaging>pom</packaging>
	<properties>
		<url.localsite>scp://source.sakaiproject.org/var/www/html/release/search/${project.version}</url.localsite>
	</properties>
	<profiles>
		<profile>
			<id>framework</id>
			<modules>
				<module>search-api/api</module>
				<module>search-help</module>
				<module>search-impl/impl</module>
				<module>search-impl/pack</module>
				<module>search-integration-test</module>
				<module>search-model</module>
				<module>search-util</module>
				<module>search-tool/tool</module>
				<module>search-test</module>
			</modules>
		</profile>
		<profile>
			<id>full</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>search-api/api</module>
				<module>search-help</module>
				<module>search-impl/impl</module>
				<module>search-impl/pack</module>
				<module>search-integration-test</module>
				<module>search-model</module>
				<module>search-util</module>
				<module>search-tool/tool</module>
				<module>search-test</module>
				<module>search-assembly</module>
			</modules>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.sakaiproject.search</groupId>
				<artifactId>search-api</artifactId>
				<version>1.2-SNAPSHOT</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.search</groupId>
				<artifactId>search-model</artifactId>
				<version>1.2-SNAPSHOT</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.search</groupId>
				<artifactId>search-impl</artifactId>
				<version>1.2-SNAPSHOT</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.search</groupId>
				<artifactId>search-util</artifactId>
				<version>1.2-SNAPSHOT</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.search</groupId>
				<artifactId>search-adapters-impl</artifactId>
				<version>1.2-SNAPSHOT</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject</groupId>
				<artifactId>sakai-test-harness</artifactId>
				<version>2.7.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<distributionManagement>
		<downloadUrl>http://source.sakaiproject.org/maven2/
		</downloadUrl>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>sakai-maven-snapshots</id>
			<name>Sakai snapshot Repo</name>
			<url>dav:http://source.sakaiproject.org/maven2-snapshots
			</url>
			<layout>default</layout>
		</snapshotRepository>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>sakai-maven2</id>
			<name>Sakai maven2 repository</name>
			<url>dav:https://source.sakaiproject.org/maven2
			</url>
			<layout>default</layout>
		</repository>
		<site>
			<id>sakai-site</id>
			<name>Sakai release Site</name>
			<url>${url.localsite}</url>
		</site>
	</distributionManagement>
	<repositories>
		<repository>
			<id>sakai-maven</id>
			<name>Sakai Maven Repo</name>
			<layout>default</layout>
			<url>http://source.sakaiproject.org/maven2
			</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<developers>
		 <developer>
            <id>david.horwitz@uct.ac.za</id>
            <name>David Horwitz</name>
            <email>david.horwitz@uct.ac.za</email>
            <url>http://blogs.uct.ac.za/blog/daves-blog</url>
            <organization>
                Centre for Educational Technology, University of Cape
                Town
            </organization>
            <organizationUrl>http://www.cet.uct.ac.za</organizationUrl>
            <roles>
                <role>developer</role>
                <role>branch manager</role>
            </roles>
            <timezone>+2</timezone>
            <properties>
                <picUrl>
                    http://www.sakaiproject.org/access/content/group/sakai-community/images/people/horwitzdavid_sakaigers_100x80.jpg
                </picUrl>
            </properties>
            </developer>
            <developer>
            <id>stephen.marquard@uct.ac.za</id>
            <name>Stephen Marquard</name>
            <email>stephen.marquard@uct.ac.za</email>
            <organization>
                Centre for Educational Technology, University of Cape
                Town
            </organization>
            <organizationUrl>http://www.cet.uct.ac.za</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
            <properties>
                <picUrl>
                    http://www.sakaiproject.org/access/content/group/sakai-foundation/images/people/marquard_100x77.jpg
                </picUrl>
            </properties>
        </developer>
	</developers>
	<contributors>
	 <contributor>
            <name>Ian Boston</name>
            <email>ian@caret.cam.ac.uk</email>
            <url>http://blog.tfd.co.uk/</url>
            <organization>
                Centre for Applied Research in Educational Technologies,
                University of Cambridge
            </organization>
            <organizationUrl>
                http://www.caret.cam.ac.uk
            </organizationUrl>
            <roles>
                <role>architect</role>
            </roles>
            <timezone>0</timezone>
            <properties>
                <picUrl>
                    http://www.caret.cam.ac.uk/wp-content/uploads/2008/12/ian.jpg
                </picUrl>
            </properties>
        </contributor>
	</contributors>
    <!-- Reporting (mvn site) -->
    <reporting>
        <plugins>
            <!-- JavaDocs: mvn javadoc:javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <aggregate>true</aggregate>
                    <source>1.5</source>
                    <links>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                    </links>
                    <breakiterator>true</breakiterator>
                    <verbose>false</verbose>
                    <maxmemory>512m</maxmemory>
                    <additionalJOption>
                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
          </additionalJOption>
                </configuration>
            </plugin>
            <!-- FindBugs: mvn findbugs:findbugs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>1.2</version>
                <configuration>
                    <findbugsXmlOutput>true</findbugsXmlOutput>
                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
            <!-- CheckStyle: mvn checkstyle:checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <outputFileFormat>xml</outputFileFormat>
                </configuration>
            </plugin>
            <!-- Cobertura: mvn cobertura:cobertura -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <configuration>
                    <formats>
                        <format>html</format>
                        <format>xml</format>
                    </formats>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
